# AFLFI

./: .gitignore  Dockerfile  GNUmakefile  README  README.md  afl_repro.py
fault_injection/: CMakeLists.txt  afl.py  analyzer.cpp  analyzer.py  build.sh  cc.py  common.h  distance.cpp  evaluation.md  fault.cpp  fifuzz-rt.c  filter.py  fuzz.py  inst.cpp  rt.c  runner.py  steps.md  threadpool.h  utils.cpp  utils.h
fault_injection/analyzer/: CMakeLists.txt  analyzer.cpp  threadpool.h
fault_injection/graph/details/: vertex_impl.hpp
fault_injection/graph/search/: common.hpp  dijkstra.hpp
fault_injection/script/: cc.py
include/: afl-fuzz.h  btree.h  fault.h  fault_injection.h  rbtree.h
instrumentation/: SanitizerCoverageLTO.so.cc  SanitizerCoveragePCGUARD.so.cc  afl-compiler-rt.o.c  afl-llvm-common.cc  afl-llvm-common.h  afl-llvm-pass.so.cc
src/: afl-cc.c  afl-fuzz-bitmap.c  afl-fuzz-init.c  afl-fuzz-one.c  afl-fuzz-queue.c  afl-fuzz-run.c  afl-fuzz-state.c  afl-fuzz-stats.c  afl-fuzz.c  btree.c  fault_injection.c  rbtree.c
static_analyzer/: CMakeLists.txt  DataFlowGraph.cpp  DataFlowGraph.h  crc16.h  main.cpp  main2.cpp  show.py  threadpool.h
static_analyzer/tools/: build.py  gen.py
